--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,20 @@
 doctype html
+
+mixin page(title, url)
+  li
+    a(href= url class= path == url ? 'active' : '')=title
+
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    span req.path: #{path}
+    nav
+      ul
+        +page('Strona Główna', '/')
+        +page('Aktualności', '/news')
+        +page('Quiz', '/quiz')
+        +page('Admin', '/admin')
+
     block content
