--- a/views/admin/index.pug
+++ b/views/admin/index.pug
@@ -2,4 +2,20 @@ extends ../layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  nav
+    ul
+      li
+        a(href='/admin/news/add') Dodaj
+  table
+    tr
+      th id
+      th tytuł
+      th data dodania
+      th akcja
+    each el, index in data
+      tr
+        td=index
+        td=el.title
+        td=el.created
+        td
+          a(href=`/admin/news/delete/${el._id}`) Usuń
